@@ -1,6 +1,4 @@
 apport:
- - speed up integrity check: only md5sum files whose ctime or mtime >
-   package .list mtime
 
 problem_report.py:
 
