@@ -2,8 +2,12 @@ apport (0.44) UNRELEASED; urgency=low
 
   * backends/packaging-dpkg.py, _check_files_md5(): Also accept a md5sum
     string in addition to a md5sum file.
+  * backends/packaging-dpkg.py, get_modified_files(): Compare package file's
+    ctime and mtime against the package list file's mtime and only md5sum the
+    files that are newer. This drastically reduces the amount of md5suming
+    (usually to zero) and thus speeds up the information collection.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 23 Jan 2007 17:11:41 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 23 Jan 2007 17:41:37 +0100
 
 apport (0.43) feisty; urgency=low
 
